--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,14 @@
     margin: 0;
     padding: 0;
     /* width: 100vw; */
-     family-font:'Gotham', sans-serif; 
-     font: size 40rem;
+    font-family: 'Gotham', sans-serif;
+    /* font: size 40rem; */
+    text-align: center;
+}
+
+html {
+    font-size: 62.5%;
+
 }
 
 .vertical--section {
@@ -18,38 +24,181 @@
 .horizontal--section {
     display: flex;
     flex-direction: row;
-    border: 3px solid yellow;
+    border: 3px solid rgb(0, 255, 17);
 }
-#upper_navbar{
-    
+
+#upper_navbar {
+    justify-content: center;
+    /* background-color: aqua; */
+    align-items: center;
+    flex: 1;
+    font-size: 1.5rem;
+    font-weight: bold;
 }
+
+#upper_navbar__logo {
+    flex: 1;
+    /* width: 20%; */
+    display: flex;
+    justify-content: flex-start;
+    margin: 2rem;
+
+    /* font-size:2rem; */
+
+}
+
+#upper_navbar__middle_ul, #upper_navbar__right_ul, .vertical--section {
+    /* text-decoration: none; */
+    list-style: none;
+}
+
+#upper_navbar__middle_ul {
+    flex: 2;
+    justify-content: center;
+
+}
+
+.upper_nav_li {
+
+    margin: 2rem;
+}
+
+#upper_navbar__right_ul {
+    /* width: 20%; */
+    flex: 1;
+    justify-content: flex-end;
+
+    /* text-align: center; */
+}
+
+.right_nav_li {
+    margin: 2rem;
+
+}
+
 svg {
     width: 10%;
     height: auto;
     padding: 15px 15px;
 }
 
+#main_header {
+    flex: 3;
+    /* align-items: center; */
+    justify-content: center;
+    font-size: 2rem;
+
+}
+
+#empty_section {
+    flex: 6;
+}
+
+#part1_header {
+    text-align: center;
+    /* font-size:2.5rem; */
+}
+
 #part1, #part2, #part3 {
     height: 100vh;
     width: 100vw;
+    /* font-size: 40rem; */
+}
+
+#footer1 {
+    flex: 3;
+    /* height: 20vh; */
+    font-size: 1.7rem;
+
+}
+
+#footer1_ul {
+    justify-content: center;
+
+}
+
+.first_footer_li {
+    margin: 3rem;
+
 }
 
 #part1 {
-    background: url(../img/car1.jpg) no-repeat center center/cover;
-
+    background: url("../img/car1.jpg") no-repeat center center/cover;
+    color: #fff;
 }
 
 #skeleton {
-    background: url(../img/car2.jpg) no-repeat center center/cover;
-
+    width: 75vw;
+    /* flex:3; */
+    background: url("../img/car2.jpg") no-repeat center center/cover;
 }
 
-/* .part2 {} */
+#skeleton-text {
+    width: 25vw;
+    /* flex:1; */
+}
+
+#skeleton-text__lower {
+    /* width:45vw; */
+    /* flex: 1; */
+    height:50vh;
+
+
+}
 
 #part2 {
-
+    color: #000;
 }
-#part3__picture{
+
+#part3__picture {
     background: url(../img/car3.jpg) no-repeat center center/cover;
 
+}
+
+aside {
+    position: fixed;
+    height: 100vh;
+
+}
+
+#aside__ul {
+    height: 100vh;
+    /* flex:1; */
+}
+
+@media(max-width:1200px) {
+    #upper_navbar__middle_ul, #right_li1, #right_li2 {
+        display: none;
+
+    }
+
+    #right_li3 {
+        background-color: grey;
+        border: 1px solid grey;
+        border-radius: 30%;
+        padding-left: 3rem;
+        padding-right: 3rem;
+        text-align: center;
+    }
+
+}
+
+@media(max-width:899) {
+    #footer1_ul {
+        flex-wrap: wrap;
+    }
+}
+
+@media(max-width:970) {
+    /* car becomes larger */
+}
+
+@media(max-width:900px) {
+    /* remove tesla, sidebar upper right, change footer */
+}
+
+@media(max-width:900px) {
+    #upper_navbar {
+        flex-wrap: wrap;
+    }
 }
