--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,64 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     /* width: 100vw; */
-    font-family: 'Gotham', sans-serif;
+    /* font-family: 'Gotham', sans-serif; */
     /* font: size 40rem; */
     text-align: center;
+    font-family: 'GothamSSm', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,  'Helvetica Neue', sans-serif;
+
+
 }
 
+@font-face {
+    font-display: swap;
+    font-family: Gotham SSm;
+    font-style: normal;
+    font-weight: 500;
+    src: url(https://cdn-design.tesla.com/tds-fonts/3.x/woff2/GothamSSm-Medium_Web.woff2) format("woff2");
+}
+
+@font-face {
+    font-display: swap;
+    font-family: Gotham SSm;
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://cdn-design.tesla.com/tds-fonts/3.x/woff2/GothamSSm-Book_Web.woff2) format("woff2");
+}
+
+@font-face {
+    font-display: swap;
+    font-family: Gotham SSm;
+    font-style: normal;
+    font-weight: 700;
+    src: url(https://cdn-design.tesla.com/tds-fonts/3.x/woff2/GothamSSm-Bold_Web.woff2) format("woff2");
+}
+
+@font-face {
+    font-display: swap;
+    font-family: Gotham SSm;
+    font-style: normal;
+    font-weight: 300;
+    src: url(https://cdn-design.tesla.com/tds-fonts/3.x/woff2/GothamSSm-Light_Web.woff2) format("woff2");
+}
+
+@font-face {
+    font-display: swap;
+    font-family: Gotham SSm;
+    font-style: normal;
+    font-weight: 200;
+    src: url(https://cdn-design.tesla.com/tds-fonts/3.x/woff2/GothamSSm-XLight_Web.woff2) format("woff2");
+}
+@font-face {
+    font-family: "gothamSSm";
+    src: url(https://cdn-design.tesla.com/tds-fonts/3.x/woff2/GothamSSm-Light_Web.woff2) format("woff2");
+    /* font-weight: "light"; */
+    font-weight: light;
+}
 html {
     font-size: 62.5%;
+    scroll-behavior: smooth;
 
 }
 
@@ -28,12 +78,15 @@ html {
 }
 
 #upper_navbar {
+    position: sticky;
     justify-content: center;
     /* background-color: aqua; */
     align-items: center;
     flex: 1;
     font-size: 1.5rem;
     font-weight: bold;
+    font-family: GothamSSm, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,  'Helvetica Neue',Arial, sans-serif;
+
 }
 
 #upper_navbar__logo {
@@ -42,11 +95,14 @@ html {
     display: flex;
     justify-content: flex-start;
     margin: 2rem;
-
-    /* font-size:2rem; */
+    font-size: 3rem;
+    margin: 0;
+}
+#upper_navbar__logo img{
+max-width: 100%;
+height:9rem;
 
 }
-
 #upper_navbar__middle_ul, #upper_navbar__right_ul, .vertical--section {
     /* text-decoration: none; */
     list-style: none;
@@ -87,7 +143,7 @@ svg {
     /* align-items: center; */
     justify-content: center;
     font-size: 2rem;
-
+    font-weight: 100;
 }
 
 #empty_section {
@@ -122,28 +178,117 @@ svg {
 
 }
 
+#first_footer_li4 h5 {
+    border: 2px solid #fff;
+    border-radius: 30%;
+    padding: 0.7rem;
+    width: auto;
+    padding-right: 3rem;
+    padding-left: 3rem;
+}
+
 #part1 {
     background: url("../img/car1.jpg") no-repeat center center/cover;
     color: #fff;
+    overflow: auto;
 }
 
-#skeleton {
+
+
+#chassis {
     width: 75vw;
     /* flex:3; */
     background: url("../img/car2.jpg") no-repeat center center/cover;
 }
 
-#skeleton-text {
+#chassis-text {
     width: 25vw;
     /* flex:1; */
+    align-items: center;
+    font-size: 1.4rem;
+    line-height: 2rem;
+    font-family: GothamSSm, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,  'Helvetica Neue', sans-serif;
 }
 
-#skeleton-text__lower {
+#chassis-text__upper {
+    /* height: 50vh; */
+    /* justify-content: ; */
+    flex: 1;
+    padding-top: 3rem;
+    padding-right: 5rem;
+}
+
+#chassis-text__upper * {
+    text-align: left;
+    /* font-size: 1.4rem; */
+    line-height: 2rem;
+}
+
+#chassis-text__upper p, h2 {
+    text-align: left;
+    /* font-size: 1.4rem; */
+    line-height: 2rem;
+    margin-bottom: 2rem;
+}
+
+#chassis-text__upper a {
+    text-decoration: underline;
+    color: #000;
+
+}
+
+#chassis-text__lower {
     /* width:45vw; */
+    width: 25vw;
+
     /* flex: 1; */
-    height:50vh;
+    /* height: 50vh; */
+    background-color: aquamarine;
+    flex: 1;
+    align-items: flex-end;
+    justify-content: center;
+    margin-bottom: 3rem;
 
+}
+#chassis-text__lower section{
+min-height: fit-content;
+width: 100%;
 
+/* min-width:fit-content; */
+
+}
+#chassis-text__lower a{
+    text-decoration:none;color:#000;
+}
+#learn_more_button{
+    display: flex;
+    background-color:none;
+    flex: 3;
+    margin-right: 1rem;
+    background-color:transparent;
+    border:none;
+    align-items:center;
+}
+#plus {
+    display: inline-block;
+    /* flex: 1; */
+    border: 1px solid #000;
+    border-radius: 50%;
+    margin-right: 1rem;
+    width:3rem;
+    height:3rem;
+    padding-top: 0.6rem;
+/* text-align: center; */
+}
+
+#learn_more {
+    /* flex: 2; */
+}
+
+#order_now {
+    flex: 4;
+    border: 1px solid #000;
+    border-radius: 30%;
 }
 
 #part2 {
@@ -156,13 +301,23 @@ svg {
 }
 
 aside {
-    position: fixed;
     height: 100vh;
+    width: 2vw;
+    flex-flow: column nowrap;
+
+    inset-inline-start: 0;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    z-index: 3;
+    color: #fff;
 
 }
 
+
 #aside__ul {
     height: 100vh;
+    color: #fff;
     /* flex:1; */
 }
 
