--- a/css/style.css
+++ b/css/style.css
@@ -115,11 +115,9 @@ html {
 #upper_navbar__middle_ul {
     flex: 2;
     justify-content: center;
-
 }
 
 .upper_nav_li {
-
     margin: 2rem;
 }
 
@@ -178,18 +176,28 @@ svg {
 }
 
 .first_footer_li {
-    margin: 3rem;
-
+    margin: 2rem;
+    justify-content: flex-start;
+    margin:10rem 2rem;
 }
-
+.first_footer_li h2 {
+    margin-bottom:0.8rem;
+    font-size:2.8rem;
+}
+.first_footer_li h6 {
+    font-size:1.2rem;
+    line-height:2rem;
+}
 #first_footer_li4 h5 {
-    border: 2px solid #fff;
-    border-radius: 30%;
+    border: 0.3rem solid #fff;
+    border-radius: 20px;
     padding: 0.7rem;
     width: auto;
     padding-right: 4rem;
     padding-left: 4rem;
 }
+
+
 
 #part1 {
     background: url("../img/car1.jpg") no-repeat center center/cover;
@@ -231,7 +239,7 @@ svg {
 #chassis-text__upper p, h2 {
     text-align: left;
     /* font-size: 1.4rem; */
-    line-height: 2rem;
+    /* line-height: 2rem; */
     margin-bottom: 2rem;
 }
 
@@ -241,7 +249,15 @@ svg {
 
 }
 
-#chassis-text__lower {
+#chassis-text__upper h2 {
+    line-height: 4rem;
+
+}
+#chassis-text__upper h3 {
+font-weight: 200;
+}
+/* #chassis-text__lower , */
+.order_button {
     /* width:45vw; */
     width: 25vw;
 
@@ -268,38 +284,52 @@ svg {
     color: #000;
 }
 
-#learn_more_button {
+.learn_more_button {
     display: flex;
     background-color: none;
-    flex: 3;
+    /* flex: 3; */
     margin-right: 1rem;
     background-color: transparent;
     border: none;
     align-items: center;
+    /* width: fit-content; */
 }
 
-#plus {
+.plus {
     display: inline-block;
     /* flex: 1; */
-    border: 1px solid #000;
+    border: 2px solid #000;
     border-radius: 50%;
-    margin-right: 1rem;
+    /* margin-right: 1rem; */
     width: 3rem;
     height: 3rem;
     padding-top: 0.6rem;
     /* text-align: center; */
 }
 
-#learn_more {
+.learn_more {
     /* flex: 2; */
 }
 
-#order_now {
-    flex: 4;
-    border: 1px solid #000;
-    border-radius: 30%;
-    padding-top: 0.3rem
+.order_now {
+   
+    /* flex: 2; */
+    border: 0.3rem solid #000;
+    border-radius: 20px;
+    padding: 0.9rem 5rem;
+    /* width: fit-content; */
+    /* height:15 rem;
+    width:2.6 rem; */
 }
+
+/* #first_footer_li4 h5 {
+    border: 0.3rem solid #fff;
+    border-radius: 20px;
+    padding: 0.7rem;
+    width: auto;
+    padding-right: 4rem;
+    padding-left: 4rem;
+} */
 
 #part2 {
     color: #000;
@@ -309,6 +339,89 @@ svg {
     background: url("../img/car3.jpg") no-repeat center center/cover;
     height: 78vh;
     /* flex:3; */
+    justify-content: flex-end;
+    align-items: center;
+}
+
+#part3__picture_ul {
+    width: 47vw;
+    height: 36%;
+
+    justify-content: center;
+    color: #fff;
+    overflow: auto;
+
+}
+
+#part3__picture_ul li {
+    text-align: center;
+    align-items: center;
+    /* align-self: center; */
+}
+
+#part3__picture_ul h6 {
+
+    font-size: 1.2rem;
+}
+
+#part3__picture_ul h2 {
+    font-size: 2.8rem;
+}
+
+#second_footer {
+    height: 22vh;
+    /* background-color: rgb(254, 181, 254); */
+}
+#second_footer__empty_box{
+    width:20vw;
+}
+#quickest_acceleration{
+    width:23vw;
+    /* background-color:rgb(250, 234, 237); */
+    justify-content: flex-start;
+    text-align: left;
+    box-sizing:border-box;
+    margin-top:4rem;
+    }
+#quickest_acceleration p{
+    text-align: left;
+    font-size:1.7rem;
+}
+#quickest_acceleration h2{
+    text-align: left;
+    font-size:2.8rem;
+    line-height: 4rem;
+}
+#quickest_acceleration_section{
+    background-color: aquamarine;
+}
+
+#quickest_acceleration__lower{
+    /* background-color:brown; */
+    align-items: flex-start;
+    width:auto;
+    font-size:1.2rem;
+    justify-content:flex-start;
+    /* text-decoration: none; */
+}
+#quickest_acceleration a{
+    text-decoration:none;
+    color: #000;
+}
+#second_footer__text {
+    width: 55vw;
+    
+
+}
+#second_footer__text p{
+    font-size:1.4rem;
+    font-weight: 500;
+    text-align: left;
+    margin-top:4rem;
+    margin-left:4rem;
+    margin-right:35rem;
+    line-height: 2rem;
+
 }
 
 aside {
