--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,7 +1,6 @@
 @media(max-width:1200px) {
     #upper_navbar__middle_ul, #right_li1, #right_li2 {
         display: none;
-
     }
 
     #right_li3 {
@@ -19,14 +18,9 @@
     }
 
     #chassis {
-        /* display: flex;
-        flex-direction: row; */
-        /* display: inline-block; */
         width: 100vw;
         height: 60vh;
         background-image: url("../img/car2.jpg") no-repeat center center/cover;
-        /* background-color: pink; */
-
     }
 
     #chassis-text {
@@ -40,7 +34,8 @@
     }
 
     #chassis-text__upper {
-        width: 60vw;height: 40vh;
+        width: 60vw;
+        height: 40vh;
     }
 }
 
@@ -48,13 +43,6 @@
 
 @media(max-width:970) {
     /* car becomes larger */
-    /* #part1 {
-        background-image: url("../img/car1.jpg") no-repeat center center/cover;
-
-        background-position:70% ;
-        background-size:70% 50%;
-        overflow:auto;
-    } */
 }
 
 @media(max-width:900px) {
@@ -62,10 +50,10 @@
     /* remove tesla, sidebar upper right, change footer */
     .sidebar_li {
         display: none;
-
     }
+
     #footer1_ul:last-child {
-flex-wrap: nowrap;
+        flex-wrap: nowrap;
     }
 }
 
