--- a/css/style.css
+++ b/css/style.css
@@ -1,70 +1,21 @@
-/* figure img {
-    background:  no-repeat center center/cover;
-} */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* width: 100vw; */
-    /* font-family: 'Gotham', sans-serif; */
-    /* font: size 40rem; */
     text-align: center;
     font-family: 'GothamSSm', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
-
-
 }
 
-@font-face {
-    font-display: swap;
-    font-family: Gotham SSm;
-    font-style: normal;
-    font-weight: 500;
-    src: url(https://cdn-design.tesla.com/tds-fonts/3.x/woff2/GothamSSm-Medium_Web.woff2) format("woff2");
-}
-
-@font-face {
-    font-display: swap;
-    font-family: Gotham SSm;
-    font-style: normal;
-    font-weight: 400;
-    src: url(https://cdn-design.tesla.com/tds-fonts/3.x/woff2/GothamSSm-Book_Web.woff2) format("woff2");
-}
-
-@font-face {
-    font-display: swap;
-    font-family: Gotham SSm;
-    font-style: normal;
-    font-weight: 700;
-    src: url(https://cdn-design.tesla.com/tds-fonts/3.x/woff2/GothamSSm-Bold_Web.woff2) format("woff2");
-}
-
-@font-face {
-    font-display: swap;
-    font-family: Gotham SSm;
-    font-style: normal;
-    font-weight: 300;
-    src: url(https://cdn-design.tesla.com/tds-fonts/3.x/woff2/GothamSSm-Light_Web.woff2) format("woff2");
-}
-
-@font-face {
-    font-display: swap;
-    font-family: Gotham SSm;
-    font-style: normal;
-    font-weight: 200;
-    src: url(https://cdn-design.tesla.com/tds-fonts/3.x/woff2/GothamSSm-XLight_Web.woff2) format("woff2");
-}
 
 @font-face {
     font-family: "gothamSSm";
     src: url(https://cdn-design.tesla.com/tds-fonts/3.x/woff2/GothamSSm-Light_Web.woff2) format("woff2");
-    /* font-weight: "light"; */
     font-weight: light;
 }
 
 html {
-    font-size: 62.5%;
+    font-size: var(--FONT_SIZE_10);
     scroll-behavior: smooth;
-
 }
 
 .vertical--section {
@@ -74,27 +25,24 @@ html {
 
 .horizontal--section {
     display: flex;
-    flex-direction: row;
 }
 
 #upper_navbar {
     position: sticky;
     justify-content: center;
-    /* background-color: aqua; */
     align-items: center;
     flex: 1;
-    font-size: 1.5rem;
+    font-size: var(--FONT_SIZE_15);
     font-weight: bold;
     font-family: GothamSSm, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
 }
 
 #upper_navbar__logo {
     flex: 1;
-    /* width: 20%; */
     display: flex;
     justify-content: flex-start;
-    margin: 2rem;
-    font-size: 3rem;
+    margin: var(--FONT_SIZE_20);
+    font-size: var(--FONT_SIZE_30);
     margin: 0;
 }
 
@@ -105,28 +53,24 @@ html {
 
 #message_icon {
     position: fixed;
-    bottom:8rem;right:4rem;
-    border: 1px solid rgb(181, 178, 178);
-
+    bottom: var(--FONT_SIZE_80);
+    right: var(--FONT_SIZE_40);
 }
 
 img.message_icon {
     max-width: 100%;
-    height: 5rem;
+    height: var(--FONT_SIZE_50);
     padding: 1rem;
     z-index: 3;
-
 }
 
 #message_icon button {
-    border: 1px solid #000;
     border-radius: 50%;
-    background-color:rgb(251, 249, 249);
+    background-color: rgb(251, 249, 249);
     box-shadow: inset 4 1px;
 }
 
 #upper_navbar__middle_ul, #upper_navbar__right_ul, .vertical--section {
-    /* text-decoration: none; */
     list-style: none;
 }
 
@@ -136,33 +80,22 @@ img.message_icon {
 }
 
 .upper_nav_li {
-    margin: 2rem;
+    margin: var(--FONT_SIZE_20);
 }
 
 #upper_navbar__right_ul {
-    /* width: 20%; */
     flex: 1;
     justify-content: flex-end;
-
-    /* text-align: center; */
 }
 
 .right_nav_li {
-    margin: 2rem;
-
-}
-
-svg {
-    width: 10%;
-    height: auto;
-    padding: 15px 15px;
+    margin: var(--FONT_SIZE_20);
 }
 
 #main_header {
     flex: 3;
-    /* align-items: center; */
     justify-content: center;
-    font-size: 2rem;
+    font-size: var(--FONT_SIZE_20);
     font-weight: 100;
 }
 
@@ -172,25 +105,20 @@ svg {
 
 #part1_header {
     text-align: center;
-    /* font-size:2.5rem; */
 }
 
 #part1, #part2, #part3 {
     height: 100vh;
     width: 100vw;
-    /* font-size: 40rem; */
 }
 
 #footer1 {
     flex: 3;
-    /* height: 20vh; */
-    font-size: 1.7rem;
-
+    font-size: var(--FONT_SIZE_17);
 }
 
 #footer1_ul {
     justify-content: center;
-
 }
 
 #speed-number {
@@ -200,204 +128,156 @@ svg {
 .first_footer_li {
     margin: 2rem;
     justify-content: flex-start;
-    margin: 10rem 2rem;
+    margin: var(--FONT_SIZE_100) var(--FONT_SIZE_40);
 }
 
 .first_footer_li h2 {
-    margin-bottom: 0.8rem;
-    font-size: 2.8rem;
+    margin-bottom: var(--FONT_SIZE_8);
+    font-size: var(--FONT_SIZE_28);
 }
 
 .first_footer_li h6 {
-    font-size: 1.2rem;
-    line-height: 2rem;
+    font-size: var(--FONT_SIZE_12);
+    line-height: var(--FONT_SIZE_20);
 }
 
 #first_footer_li4 h5 {
-    border: 0.3rem solid #fff;
+    border: var(--FONT_SIZE_3) solid var(--LIGHT_COLOR);
     border-radius: 20px;
     padding: 0.7rem;
     width: auto;
-    padding-right: 4rem;
-    padding-left: 4rem;
+    padding-right: var(--FONT_SIZE_40);
+    padding-left: var(--FONT_SIZE_40);
 }
 
 #first_footer_li4 h5:hover {
-    background-color: #fff;
-    color: black;
+    background-color: var(--LIGHT_COLOR);
+    color: var(--DARK_COLOR);
 }
 
 #part1 {
     background: url("../img/car1.jpg") no-repeat center center/cover;
-    color: #fff;
+    color: var(--LIGHT_COLOR);
     overflow: auto;
 }
 
-#part2::target-text {
-  color: #000;
-}
 
 #chassis {
     width: 75vw;
-    /* flex:3; */
     background: url("../img/car2.jpg") no-repeat center center/cover;
 }
 
 #chassis-text {
     width: 25vw;
-    /* flex:1; */
     align-items: center;
-    font-size: 1.4rem;
-    line-height: 2rem;
+    font-size: var(--FONT_SIZE_14);
+    line-height: var(--FONT_SIZE_20);
     font-family: GothamSSm, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
 }
 
 #chassis-text__upper {
-    /* height: 50vh; */
-    /* justify-content: ; */
     flex: 1;
-    padding-top: 3rem;
-    padding-right: 5rem;
+    padding-top: var(--FONT_SIZE_30);
+    padding-right: var(--FONT_SIZE_50);
 }
 
 #chassis-text__upper * {
     text-align: left;
-    /* font-size: 1.4rem; */
-    line-height: 2rem;
+    line-height: var(--FONT_SIZE_20);
 }
 
 #chassis-text__upper p, h2 {
     text-align: left;
-    /* font-size: 1.4rem; */
-    /* line-height: 2rem; */
-    margin-bottom: 2rem;
+    margin-bottom: var(--FONT_SIZE_20);
 }
 
 #chassis-text__upper a {
     text-decoration: underline;
-    color: #000;
-
+    color: var(--DARK_COLOR);
 }
 
 #chassis-text__upper h2 {
-    line-height: 4rem;
-
+    line-height: var(--FONT_SIZE_40);
 }
 
 #chassis-text__upper h3 {
     font-weight: 200;
 }
 
-/* #chassis-text__lower , */
 .order_button {
-    /* width:45vw; */
     width: 25vw;
-
-    /* flex: 1; */
-    /* height: 50vh; */
-    /* background-color: aquamarine; */
     flex: 1;
     align-items: flex-end;
     justify-content: center;
     margin-bottom: 3rem;
-
 }
 
 #chassis-text__lower section {
     min-height: fit-content;
     width: 100%;
-    /* padding-top:auto; */
-    /* min-width:fit-content; */
-
 }
 
 #chassis-text__lower a {
     text-decoration: none;
-    color: #000;
+    color: var(--DARK_COLOR);
 }
 
 .learn_more_button {
     display: flex;
     background-color: none;
-    /* flex: 3; */
     margin-right: 1rem;
     background-color: transparent;
     border: none;
     align-items: center;
-    /* width: fit-content; */
 }
 
 #chassis-text__lower .order_now:hover, #chassis-text__lower .plus:hover, #quickest_acceleration__lower .plus:hover, #quickest_acceleration__lower .order_now:hover {
-    background-color: #000;
-    color: #fff;
+    background-color: var(--DARK_COLOR);
+    color: var(--LIGHT_COLOR);
 }
 
 .plus {
     display: inline-block;
-    /* flex: 1; */
-    border: 2px solid #000;
+    border: 2px solid var(--DARK_COLOR);
     border-radius: 50%;
-    /* margin-right: 1rem; */
-    width: 3rem;
-    height: 3rem;
+    width: var(--FONT_SIZE_30);
+    height: var(--FONT_SIZE_30);
     padding-top: 0.6rem;
-    /* text-align: center; */
-}
-
-.learn_more {
-    /* flex: 2; */
+    margin-right: 1rem;
 }
 
 .order_now {
-
-    /* flex: 2; */
-    border: 0.3rem solid #000;
+    border: 0.3rem solid var(--DARK_COLOR);
     border-radius: 20px;
-    padding: 0.9rem 5rem;
-    /* width: fit-content; */
-    /* height:15 rem;
-    width:2.6 rem; */
+    padding: var(--FONT_SIZE_9) var(--FONT_SIZE_50);
 }
 
-/* #first_footer_li4 h5 {
-    border: 0.3rem solid #fff;
-    border-radius: 20px;
-    padding: 0.7rem;
-    width: auto;
-    padding-right: 4rem;
-    padding-left: 4rem;
-} */
-
 #part2 {
-    color: #000;
+    color: var(--DARK_COLOR);
 }
 
 #part3__picture {
     background: url("../img/car3.jpg") no-repeat center center/cover;
     height: 78vh;
-    /* flex:3; */
     justify-content: flex-end;
     align-items: center;
 }
 
 #part3__picture_ul {
-    width: auto;
+    width: 60%;
     height: 36%;
-
     justify-content: center;
-    color: #fff;
-    /* overflow: auto; */
-
+    align-items: center;
+    color: var(--LIGHT_COLOR);
+    margin-bottom: 2.5rem;
 }
 
 #part3__picture_ul li {
     text-align: center;
     align-items: center;
-    /* align-self: center; */
 }
 
 #part3__picture_ul h6 {
-
     font-size: 1.2rem;
 }
 
@@ -407,7 +287,6 @@ svg {
 
 #second_footer {
     height: 22vh;
-    /* background-color: rgb(254, 181, 254); */
 }
 
 #second_footer__empty_box {
@@ -416,7 +295,6 @@ svg {
 
 #quickest_acceleration {
     width: 23vw;
-    /* background-color:rgb(250, 234, 237); */
     justify-content: flex-start;
     text-align: left;
     box-sizing: border-box;
@@ -434,63 +312,51 @@ svg {
     line-height: 4rem;
 }
 
-#quickest_acceleration_section {
-    background-color: aquamarine;
-}
-
 #quickest_acceleration__lower {
-    /* background-color:brown; */
     align-items: flex-start;
     width: auto;
     font-size: 1.2rem;
     justify-content: flex-start;
-    /* text-decoration: none; */
 }
 
 #quickest_acceleration a {
     text-decoration: none;
-    color: #000;
+    color: var(--DARK_COLOR);
 }
 
 #second_footer__text {
     width: 55vw;
-
-
 }
 
 #second_footer__text p {
-    font-size: 1.4rem;
+    font-size: var(--FONT_SIZE_14);
     font-weight: 500;
     text-align: left;
     margin-top: 4rem;
     margin-left: 4rem;
     margin-right: 35rem;
     line-height: 2rem;
-
 }
 
 aside {
     height: 100vh;
     width: 2vw;
     flex-flow: column nowrap;
-
     inset-inline-start: 0;
     justify-content: center;
     position: fixed;
     top: 0;
     z-index: 3;
-    color: #fff;
-
+    color: var(--LIGHT_COLOR);
 }
 
 
 #aside__ul {
     height: 100vh;
-    color: #fff;
+    color: var(--LIGHT_COLOR);
     display: block;
     list-style-type: none;
     line-height: 3rem;
-    /* flex:1; */
     margin-top: 37vh;
 }
 
@@ -503,20 +369,13 @@ aside {
     text-align: left;
     box-sizing: border-box;
     text-decoration: none;
-    color: #fff;
+    color: var(--LIGHT_COLOR);
     position: relative;
 }
-
-#part2[style*="color: #fff"] {
-    color: #000 !important;
-  }
-  
 
 #sidebar_li1 {
     font-weight: 800;
 }
-
-
 
 #sidebar_li1:hover::before {
     content: 'MODEL 3';
@@ -560,7 +419,7 @@ aside {
     display: block;
     font-weight: 600;
     height: 75.36rem;
-    line-height: 2rem;
+    line-height: var(--FONT_SIZE_20);
 }
 
 #sidebar_li4:hover::before {
@@ -575,8 +434,7 @@ aside {
     display: block;
     font-weight: 600;
     height: 10rem;
-    /* 75.36rem; */
-    line-height: 2rem;
+    line-height: var(--FONT_SIZE_20);
 }
 
 #sidebar_li5:hover::before {
@@ -621,7 +479,7 @@ aside {
     display: block;
     font-weight: 600;
     height: 75.36rem;
-    line-height: 2rem;
+    line-height: var(--FONT_SIZE_20);
 }
 
 #sidebar_li8:hover::before {
@@ -636,7 +494,7 @@ aside {
     display: block;
     font-weight: 600;
     height: 75.36rem;
-    line-height: 2rem;
+    line-height: var(--FONT_SIZE_20);
 }
 
 #sidebar_li9:hover::before {
@@ -651,9 +509,5 @@ aside {
     display: block;
     font-weight: 600;
     height: 75.36rem;
-    line-height: 2rem;
+    line-height: var(--FONT_SIZE_20);
 }
-
-/* #sidebar_li1:hover::before {
-    content: 'MODEL 3';
-} */
